@@ -1,112 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
- <class>ExternalSettings</class>
- <widget class="QWidget" name="ExternalSettings">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>368</width>
-    <height>300</height>
-   </rect>
-  </property>
-  <property name="windowTitle">
-   <string>Form</string>
-  </property>
-  <layout class="QFormLayout" name="formLayout">
-   <property name="fieldGrowthPolicy">
-    <enum>QFormLayout::ExpandingFieldsGrow</enum>
-   </property>
-   <property name="margin">
-    <number>0</number>
-   </property>
-   <item row="0" column="0">
-    <widget class="BuddyLabel" name="label_4">
-     <property name="text">
-      <string>Show icon in notification area:</string>
-     </property>
-     <property name="buddy">
-      <cstring>systemTrayCheckBox</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="OnOffButton" name="systemTrayCheckBox">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="BuddyLabel" name="minimiseOnCloseLabel">
-     <property name="text">
-      <string>Minimize to notification area when closed:</string>
-     </property>
-     <property name="buddy">
-      <cstring>minimiseOnClose</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="OnOffButton" name="minimiseOnClose">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="BuddyLabel" name="label_5">
-     <property name="text">
-      <string>Show popup messages when changing tracks:</string>
-     </property>
-     <property name="buddy">
-      <cstring>systemTrayPopup</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="OnOffButton" name="systemTrayPopup">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="gnomeMediaKeysLabel">
-     <property name="text">
-      <string>Support media keys under GNOME/Unity:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="OnOffButton" name="gnomeMediaKeys"/>
-   </item>
-  </layout>
- </widget>
- <customwidgets>
-  <customwidget>
-   <class>OnOffButton</class>
-   <extends>QCheckBox</extends>
-   <header>onoffbutton.h</header>
-  </customwidget>
-  <customwidget>
-   <class>BuddyLabel</class>
-   <extends>QLabel</extends>
-   <header>buddylabel.h</header>
-  </customwidget>
- </customwidgets>
- <tabstops>
-  <tabstop>systemTrayCheckBox</tabstop>
-  <tabstop>minimiseOnClose</tabstop>
-  <tabstop>systemTrayPopup</tabstop>
-  <tabstop>gnomeMediaKeys</tabstop>
- </tabstops>
- <resources/>
- <connections/>
-</ui>
