@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>435</width>
-    <height>292</height>
+    <height>325</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -385,6 +385,80 @@ When the image is displayed, it will be cropped (either top/bottom, or left/righ
           <string/>
          </property>
         </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_7">
+      <attribute name="title">
+       <string>External</string>
+      </attribute>
+      <layout class="QFormLayout" name="formLayout_7">
+       <item row="0" column="0">
+        <widget class="BuddyLabel" name="label_10">
+         <property name="text">
+          <string>Show icon in notification area:</string>
+         </property>
+         <property name="buddy">
+          <cstring>systemTrayCheckBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="OnOffButton" name="systemTrayCheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="BuddyLabel" name="minimiseOnCloseLabel">
+         <property name="text">
+          <string>Minimize to notification area when closed:</string>
+         </property>
+         <property name="buddy">
+          <cstring>minimiseOnClose</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="OnOffButton" name="minimiseOnClose">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="BuddyLabel" name="label_11">
+         <property name="text">
+          <string>Show popup messages when changing tracks:</string>
+         </property>
+         <property name="buddy">
+          <cstring>systemTrayPopup</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="OnOffButton" name="systemTrayPopup">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="gnomeMediaKeysLabel">
+         <property name="text">
+          <string>Support media keys under GNOME/Unity:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="OnOffButton" name="gnomeMediaKeys"/>
        </item>
       </layout>
      </widget>
